src/styles.scss
/* You can add global styles to this file, and also import other style files */

@font-face{
    font-family: "relative-bold";
    src: url('./assets/font/relative-bold.ttf') format('truetype');
}
@font-face{
    font-family: "relative-book";
    src: url('./assets/font/relative-book.ttf') format('truetype');
}
@font-face{
    font-family: "relative-mono10pitch";
    src: url('./assets/font/relative-mono10pitch.ttf') format('truetype');
}

@font-face{
    font-family: "freight-big-medium-italic";
    src: url('./assets/font/Freight-Big-Medium-Italic.otf') format('opentype');
}

html {
    // Why Font renders thicker in browsers?
    // https://stackoverflow.com/questions/28217486/font-renders-thicker-in-browsers
    -moz-osx-font-smoothing: grayscale;
    -webkit-font-smoothing: antialiased;
    //
    min-height: 100vh;
    font-family: 'relative-book', monospace;
    color: '#f1f1f1';
}


body {
    background-color: '#EFEFEF';
    margin: 0;
    width:100%;
}

// to solve ios horizontal scroll issue
body {
        overflow: hidden;
        overflow-y: scroll; /* has to be scroll, not auto */
        -webkit-overflow-scrolling: touch;
}

// font sizes
@media (min-width: 415px) {
    html{
        font-size:18px;
    }
}
@media (min-width: 768px) {
    html{
        font-size:20px;
    }
}

